Blah blah blah I added stuff blah blah - Added the other 3 major stone types (Soltra, Aestum and Inetra), no block variants like stairs yet. - Updated some advancement requirements, and added some new ones - Updated tags and added new ones - Added alt recipes for smithing templates that can use either Adamuna or Diamonds - Added custom sounds for some blocks - Added armour, no equipped textures yet (Rockhide, Exoskeleton, Heart, Ferrebris, Umburam, Adamuna and Nihoxite) - shifted some classes around for better organisation - Started work on Noxerna Portal stuff (the portal block class is currently commented out, so it doesn't blow up in the faces of any RunClient wanters)